# waldiff

./: .gitignore  Makefile  README.md  TODO  Tap-tests-instructions.txt  WALReader_implementation.c  meson.build  pgarch.c  regression.out  wal_diff--1.0.sql  wal_diff.c  wal_diff.conf  wal_diff.control  wal_diff_func.c  wal_diff_func.h  wal_diff_rmgr.c  wal_diff_rmgr.h  wal_raw_reader.c  wal_raw_reader.h  waldiff--1.0.sql  waldiff.c  waldiff.conf  waldiff.control  waldiff.h  waldiff_decoding_encoding.c  waldiff_decoding_encoding.h  waldiff_reader.c  waldiff_reader.h  waldiff_rmgr.c  waldiff_rmgr.h  waldiff_test.c  waldiff_test.h  waldiff_writer.c  waldiff_writer.h
oldfiles/: wal_diff.c  wal_diff_func.c  wal_diff_func.h  wal_diff_rmgr.c  wal_diff_rmgr.h  waldiff_reader.c  waldiff_reader.h
t/: 001_switch_wal.pl  002_check_wal_diff.pl  002_check_waldiff.pl  003_check_rdwr_operations.pl  004_check_skip_first.pl  004_check_skip_operation.pl  005_archiving_and_recovery.pl
wal_diff/: Makefile  meson.build  wal_diff.c  wal_diff.conf
wal_diff/t/: 001_switch_wal.pl
